--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,6 @@
         "codeception/module-phpbrowser": "^1.0",
         "codeception/module-rest": "^1.0.0",
         "codeception/module-asserts": "^1.0.0"
-    }
+    },
+   "minimum-stability": "dev",
 }
