--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -6,8 +6,8 @@
 
 actor: AcceptanceTester
 modules:
-    enabled:
-        - PhpBrowser:
-            url: https://yandex.ru/
-        - \Helper\Acceptance
-step_decorators: ~        
+    enabled: [Helper\Acceptance, WebDriver]
+    config:
+        WebDriver:
+          url: https://yandex.ru/
+          browser: 'chrome'
