--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,11 @@
         "codeception/module-rest": "^1.0.0",
         "codeception/module-asserts": "^1.0.0"
     },
+  "require-dev": {
+        "codeception/module-rest": "^1.3",
+        "codeception/module-asserts": "^1.3",
+        "se/selenium-server-standalone": "^3.141",
+        "codeception/module-webdriver": "^1.4"
+    }
    "minimum-stability": "dev",
 }
