--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         "codeception/module-asserts": "^1.3",
         "se/selenium-server-standalone": "^3.141",
         "codeception/module-webdriver": "^1.4"
-    }
-   "minimum-stability": "dev",
+    },
+   "minimum-stability": "dev"
 }
